<resources>
    <string name="app_name">TodoAppByStevdzaSan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_tv">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>