<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/search"

        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_viewBy"
            android:title="View By">
            <menu>
                <item
                    android:id="@+id/menu_view_by_list"
                    android:title="List" />
                <item
                    android:id="@+id/menu_view_by_grid"
                    android:title="Grid" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_deleteAll"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>